--- a/index.html
+++ b/index.html
@@ -39,5 +39,38 @@
                 projeto de sistemas de computação completos.</p>
         </div>
     </section>
+    <section class="container">
+        <div id="info">
+            <h2>Nossa Estrutura</h2>
+            <p>Conheça um pouco mais da estrutura localizada
+                    em nosso Departamento</p>
+            <div id="info2">
+                <div id="sede">
+                    <img src="images/cabelinho.jpg" alt="cabelo" width="150" height="200">
+                    <h5>Sede do Departamento de Computação</h5>
+                    <p>O Departamento de Computação possui um auditório, trinta salas de professores, dez laboratórios,
+                        banheiros no térreo e no pavimento superior, elevador, salas de reuniões e sala da secretaria.</p>
+                </div>
+                <div>
+                    <img src="images/daniellindo.jpg" alt="daniel" width="150" height="200">
+                    <h5>Laboratórios do Departamento de Computação</h5>
+                    <p>Atualmente o DCOMP dispõe de 10 laboratórios de informática em sua estrutura sede, sendo compostos por
+                        computadores de última geração e em bom estado de conservação para utilização dos alunos</p>
+                </div>
+                <div>
+                    <img src="images/oxen.jpg" alt="oxen" width="150" height="200">
+                    <h5>Auditório do Departamento de Computação</h5>
+                    <p>O auditório possui capacidade para acomodar até 100 pessoas, servindo como um espaço para palestras,
+                        mini-cursos e outros eventos relacionados à área de computação.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div id="imgfinal">
+        <h2>Escolha um de Nossos Cursos e Venha Fazer Parte
+            dessa Jornada de Aprendizado</h2>
+        </br>
+        <button id="btnfinal">Contate-nos</button>
+    </div>
 </body>
 </html>
