--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
         <button class="hero-btn"> Visite-nos para saber mais </button>
     </div>
     <section class="container">
-        </br>
+        <br>
         <div id="sistemas">
             <h3>Sistemas de informação</h3>
 
-            </br>
+            <br>
             <p>O Bacharel em Sistemas de Informação deve ser capaz de gerenciar e desenvolver modelos associados e métodos de
                 gestão da área de sistemas de informação além de modelos empregados no diagnóstico, planejamento,
                 implementação e avaliação de projetos de sistemas de informação.</p>
         </div>
         <div id="ciência">
             <h3>Ciência da Computação</h3>
-            </br>
+            <br>
             <p>O Bacharel em Ciência da Computação deverá assumir um papel de racionalização,
                 desenvolvimento e automação de rotinas administrativas das organizações, e no
                 suporte aos seus sistemas de controle operacional
@@ -33,7 +33,7 @@
         </div>
         <div id="engenharia">
             <h3>Eng. da Computação</h3>
-            </br>
+            <br>
             <p>O Engenheiro de Computação deverá ter uma sólida formação técnico-científica e
                 profissional geral que o capacite com os conhecimentos de Ciência da Computação e de Engenharia Elétrica necessários ao
                 projeto de sistemas de computação completos.</p>
@@ -46,19 +46,19 @@
                     em nosso Departamento</p>
             <div id="info2">
                 <div id="sede">
-                    <img src="images/cabelinho.jpg" alt="cabelo" width="150" height="200">
+                    <img src="images/dcomplugar.jpeg" alt="cabelo" width="150" height="200">
                     <h5>Sede do Departamento de Computação</h5>
                     <p>O Departamento de Computação possui um auditório, trinta salas de professores, dez laboratórios,
                         banheiros no térreo e no pavimento superior, elevador, salas de reuniões e sala da secretaria.</p>
                 </div>
                 <div>
-                    <img src="images/daniellindo.jpg" alt="daniel" width="150" height="200">
+                    <img src="images/labdcomp.jpeg" alt="daniel" width="150" height="200">
                     <h5>Laboratórios do Departamento de Computação</h5>
                     <p>Atualmente o DCOMP dispõe de 10 laboratórios de informática em sua estrutura sede, sendo compostos por
                         computadores de última geração e em bom estado de conservação para utilização dos alunos</p>
                 </div>
                 <div>
-                    <img src="images/oxen.jpg" alt="oxen" width="150" height="200">
+                    <img src="images/auditoriodcomp.jpeg" alt="oxen" width="150" height="200">
                     <h5>Auditório do Departamento de Computação</h5>
                     <p>O auditório possui capacidade para acomodar até 100 pessoas, servindo como um espaço para palestras,
                         mini-cursos e outros eventos relacionados à área de computação.</p>
@@ -69,7 +69,7 @@
     <div id="imgfinal">
         <h2>Escolha um de Nossos Cursos e Venha Fazer Parte
             dessa Jornada de Aprendizado</h2>
-        </br>
+        <br>
         <button id="btnfinal">Contate-nos</button>
     </div>
 </body>
